1999-11-09  Katsumi Yamaoka   <yamaoka@jpl.org>

	* pcustom.el: Warn if the new custom library is not found at the
	compile time.

	* APEL-CFG: Don't add the path of "custom" to `load-path'.

	* poe-18.el (file-executable-p): Returns nil if the file does not
	exist.

1999-11-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (put-text-property, next-property-change, 
	text-properties-at): Define as null function.

1999-11-02  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poe-18.el (add-text-properties, get-text-property): Define as
	null function.
	(file-executable-p): New function.


1999-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* APEL: Version 9.23 released.

1999-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* APEL-MK (compile-apel-package): Compile `emu-modules-to-compile'
	instead of `emu-modules'.
	(compile-apel): Likewise.

	* EMU-ELS (emu-modules-to-compile): New variable which is used for
	compiling in APEL-MK.  If the feature `utf-2000' is provided,
	`mcs-xmu' is removed from its value even if `emu-modules' contains
	it.
	(emu-modules-not-to-compile): New variable.

	* mcs-xm.el (mime-iso646-character-unification-alist): Move to
	mcs-xmu.el.
	(mime-unified-character-face): Move to mcs-xmu.el.
	(mime-character-unification-limit-size): Move to mcs-xmu.el.
	(decode-mime-charset-region-with-iso646-unification): Move to
	mcs-xmu.el.

	* mcs-xmu.el: New file.

1999-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* EMU-ELS (pces-modules): Don't check for the feature `mule'
	whether `pces-xfc' is required.
	* pces.el: Likewise.

	* mcs-xm.el: (decode-mime-charset-region-with-iso646-unification):
	Narrow to the region while decoding; bind `case-fold-search' to nil.
	(mime-character-unification-limit-size): Make it can also be nil
	which means the size is unlimited.

1999-10-14  Mikio Nakajima    <minakaji@osaka.email.ne.jp>

	* mcs-xm.el (decode-mime-charset-region-with-iso646-unification):
	Don't put `mime-unified-character-face' to unified text if it is
	nil.